--- a/website/style.css
+++ b/website/style.css
@@ -73,7 +73,7 @@ a .btn {
 }
 
 .hero .heroD {
-    background-image: url('img/hero.png');
+    background-image: url('img/LB.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
